<resources>
    <string name="app_name">calculator_real</string>
    <string name="zero">0</string>
    <string name="clear">C</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="divide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="addition">+</string>
    <string name="six">6</string>
    <string name="five">5</string>
    <string name="four">4</string>
    <string name="minus">-</string>
    <string name="three">3</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="multiply">*</string>
    <string name="auto">A</string>
    <string name="btn_zero">0</string>
    <string name="dot">.</string>
    <string name="equal_to">=</string>
    <string name="result_zero">0</string>
    <string name="sol_zero">0</string>
</resources>